--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
     <title>UEFA Champions League - Solkoff Coefficients</title>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/playoff-styles.css">
 </head>
 
 <body>
@@ -20,35 +21,110 @@
             <button id="refreshBtn" class="btn">Refresh Data</button>
             <span id="lastUpdated" class="last-updated"></span>
             <div class="sort-help">
-                <small>Click headers to sort • 3rd click removes sort • Strength = Points × Solkoff</small>
+                <small>Click headers to sort • 3rd click removes sort • Strength = (Points % × Solkoff) / 100</small>
             </div>
         </div>
 
-        <div id="loading" class="loading">Loading standings...</div>
-        <div id="error" class="error" style="display: none;"></div>
-
-        <div class="table-container">
-            <table id="standingsTable" class="standings-table">
-                <thead>
-                    <tr>
-                        <th>Pos</th>
-                        <th>Team</th>
-                        <th>P</th>
-                        <th>W</th>
-                        <th>D</th>
-                        <th>L</th>
-                        <th>GF</th>
-                        <th>GA</th>
-                        <th>GD</th>
-                        <th>Pts</th>
-                        <th>Solkoff</th>
-                        <th>Strength</th>
-                    </tr>
-                </thead>
-                <tbody id="standingsBody">
-                </tbody>
-            </table>
+        <div class="tabs-container">
+            <div class="tabs-header">
+                <button class="tab-btn" data-tab="league">League Table</button>
+                <button class="tab-btn active" data-tab="knockout-playoff">Knockout Play-off</button>
+                <button class="tab-btn" data-tab="round-of-16">Round of 16</button>
+                <button class="tab-btn" data-tab="quarter-final">Quarter-final</button>
+                <button class="tab-btn" data-tab="semi-final">Semi-final</button>
+                <button class="tab-btn" data-tab="final">Final</button>
+            </div>
+            <div class="tabs-content">
+                <div class="tab-pane" id="league-tab">
+                    <div id="loading" class="loading">Loading standings...</div>
+                    <div id="error" class="error" style="display: none;"></div>
+                    <div class="table-container">
+                        <table id="standingsTable" class="standings-table">
+                            <thead>
+                                <tr>
+                                    <th>Pos</th>
+                                    <th>Team</th>
+                                    <th>P</th>
+                                    <th>W</th>
+                                    <th>D</th>
+                                    <th>L</th>
+                                    <th>GF</th>
+                                    <th>GA</th>
+                                    <th>GD</th>
+                                    <th>Pts</th>
+                                    <th>Solkoff</th>
+                                    <th>Strength</th>
+                                </tr>
+                            </thead>
+                            <tbody id="standingsBody">
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="tab-pane active" id="knockout-playoff-tab">
+                    <div class="playoff-section">
+                        <h2>Knockout Play-off Pairs</h2>
+                        <p class="section-description">
+                            Historical analysis based on common opponents (last <span id="historicalYears">10</span>
+                            years)
+                        </p>
+                        <div id="knockout-playoff-pairs" class="playoff-pairs">
+                            <!-- Play-off pairs will be loaded here -->
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-pane" id="round-of-16-tab">
+                    <div class="playoff-section">
+                        <h2>Round of 16 Pairs</h2>
+                        <p class="section-description">
+                            Historical analysis based on common opponents (last <span id="historicalYears2">10</span>
+                            years)
+                        </p>
+                        <div id="round-of-16-pairs" class="playoff-pairs">
+                            <!-- Pairs will be loaded here -->
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-pane" id="quarter-final-tab">
+                    <div class="playoff-section">
+                        <h2>Quarter-final Pairs</h2>
+                        <p class="section-description">
+                            Historical analysis based on common opponents (last <span id="historicalYears3">10</span>
+                            years)
+                        </p>
+                        <div id="quarter-final-pairs" class="playoff-pairs">
+                            <!-- Pairs will be loaded here -->
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-pane" id="semi-final-tab">
+                    <div class="playoff-section">
+                        <h2>Semi-final Pairs</h2>
+                        <p class="section-description">
+                            Historical analysis based on common opponents (last <span id="historicalYears4">10</span>
+                            years)
+                        </p>
+                        <div id="semi-final-pairs" class="playoff-pairs">
+                            <!-- Pairs will be loaded here -->
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-pane" id="final-tab">
+                    <div class="playoff-section">
+                        <h2>Final</h2>
+                        <p class="section-description">
+                            Historical analysis based on common opponents (last <span id="historicalYears5">10</span>
+                            years)
+                        </p>
+                        <div id="final-pairs" class="playoff-pairs">
+                            <!-- Pairs will be loaded here -->
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+
+        <div id="playoffAnalysisModal" class="playoff-modal"></div>
     </div>
 
     <script src="/app.js"></script>
