Use real 10y history for the history analysis

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,10 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <title>UEFA Champions League - Solkoff Coefficients</title>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-    <link rel="stylesheet" href="/styles.css">
-    <link rel="stylesheet" href="/playoff-styles.css">
+    <link rel="stylesheet" href="/styles.css?v=2.0">
+    <link rel="stylesheet" href="/playoff-styles.css?v=2.0">
 </head>
 
 <body>
